# codemapper

./: .gitignore  CLAUDE.md  LICENSE  README.md  changelog.md  code_mapper.py  codemapper.example.toml  codemapper.py  kickstart.ps1  kickstart.sh  pyproject.toml  readme.md  requirements.txt  setup.py
.claude/: CLAUDE.md  settings.local.json
.codemap/: codemapper.codemap.md
.github/: FUNDING.yml
.github/workflows/: pylint.yml  pytest.yml  ruff.yml  todos.yml  update-todo-badges.yml
_example/: ansible-role-apache_codemap.md  claude-sync_codemap.md
_mapped/: ansible-role-apache_codemap.md
docs/: codemapper-overview.md  codemapper-summary.md  python-rules.md  todo.md
docs/briefs/: brief-code-restructure.md  brief-xml-export.md  docmap-evaluation.md  docmap-feature.md
docs/builds/: pypi.md
docs/standards/: pylintrc.md
example-output/: shaneholloman.iptables_structure.md
notes/: complete-pypi-publication-guide.md  pypi.md  renaming-suggestions-workflow.md  summary.md  todo.md
scripts/: update-todo-badges.ps1
src/codemapper/: __init__.py  cli.py  codemapper.py  config.py  docmap.py  help.py  main.py  types.py  utils.py
src/codemapper/builders/: build_codemap.py  build_docmap.py  build_markdown.py
src/codemapper/processors/: process_dir.py  process_git.py
src/codemapper/readers/: detect_types.py  read_files.py  scan_paths.py
src/codemapper/writers/: manage_output.py
tests/: conftest.py  test_codemapper.py  test_github_codemapper.py  test_local_codemapper.py
tests/integration/: test_full_codemap.py
tests/unit/: test_build_codemap.py  test_build_markdown.py  test_config.py  test_detect_types.py  test_manage_output.py  test_process_dir.py  test_read_files.py  test_scan_paths.py
wip/functions/spreadsheets/: manual_paper_ratings.md
wip/spreadsheets/: manual_paper_ratings.md  spreasheet_to_markdown.py
wip/xml-exports/: xml-example-codemapper.xml  xml-example-mkdocs-template-enterprise.xml
