[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[project]
name = "codemapper"
version = "4.3.0"
description = "A tool to generate comprehensive Markdown artifacts of directory structures and file contents"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Shane Holloman", email = "shaneholloman@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
keywords = ["codemapper", "markdown", "directory", "file contents"]
dependencies = [
  "chardet",
  "pathspec",
]
[project.urls]
"Homepage" = "https://github.com/shaneholloman/codemapper"

[project.scripts]
codemapper = "codemapper.main:main"
